--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-safe-action": "^7.10.4",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "react": "^19.0.0",
