--- a/env.example
+++ b/env.example
@@ -3,7 +3,11 @@ APP_URL=http://localhost:3000
 NEXT_SERVER_ACTIONS_ENCRYPTION_KEY=secretsupersecret12345
 
 # DB
-DATABASE_URL=postgresql://user:password@localhost:5432/db_name?schema=public
+POSTGRES_HOST=postgres_db
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=example
+POSTGRES_DB=unicap
 
 # Reset Password
 RESET_PASSWORD_TOKEN_MINUTES=20
