--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "nextjs-template",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-types": "tsc --noEmit --pretty",
+    "db:migrate": "drizzle-kit migrate",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -20,8 +26,9 @@
     "drizzle-orm": "^0.41.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "next": "^15.2.4",
     "next-safe-action": "^7.10.4",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.1",
     "react": "^19.0.0",
@@ -43,7 +50,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "tailwindcss": "^4",
