--- a/env.example
+++ b/env.example
@@ -2,12 +2,16 @@ APP_URL=http://localhost:3000
 
 NEXT_SERVER_ACTIONS_ENCRYPTION_KEY=secretsupersecret12345
 
-# DB
+# POSTGRES
 POSTGRES_HOST=postgres_db
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=example
 POSTGRES_DB=unicap
+
+# REDIS
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 # Reset Password
 RESET_PASSWORD_TOKEN_MINUTES=20
