--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -1,9 +1,27 @@
 name: PROJECT_NAME_dev
 
 services:
+  queue:
+    build:
+      context: .
+      dockerfile: ./docker/dev.dockerfile
+    container_name: PROJECT_NAME_queue_dev
+    command: bun tsx watch src/tasks/workers.ts
+    volumes:
+      - .:/app/
+      - ./node_modules:/app/node_modules
+    depends_on:
+      - redis
+    env_file:
+      - .env
+    environment:
+      - REDIS_HOST=redis # to override the default redis host
+      - POSTGRES_HOST=postgres_db
+      - POSTGRES_PORT=5432
+
   postgres_db:
     image: postgres:17.4-alpine
-    container_name: pgsql_dev
+    container_name: PROJECT_NAME_pgsql_dev
     ports:
       - 5433:5432
     volumes:
@@ -11,6 +29,16 @@ services:
     env_file:
       - .env
 
+  redis:
+    image: redis:7-alpine
+    container_name: PROJECT_NAME_redis_dev
+    ports:
+      - 6379:6379
+    volumes:
+      - redis_data:/data
+
 volumes:
   postgres_data:
-    name: pgsql_dev_data
+    name: PROJECT_NAME_pgsql_data_dev
+  redis_data:
+    name: PROJECT_NAME_redis_data_dev
