--- a/compose.yml
+++ b/compose.yml
@@ -9,9 +9,29 @@ services:
     env_file:
       - .env
 
+  queue:
+    build:
+      context: .
+      dockerfile: ./docker/dev.dockerfile
+    container_name: PROJECT_NAME_queue_prod
+    command: bun tsx watch src/tasks/workers.ts
+    volumes:
+      - .:/app/
+      - ./node_modules:/app/node_modules
+    depends_on:
+      - redis
+    env_file:
+      - .env
+    environment:
+      - REDIS_HOST=redis # to override the default redis host
+      - POSTGRES_HOST=postgres_db
+      - POSTGRES_PORT=5432
+
   postgres_db:
     image: postgres:17.4-alpine
-    container_name: pgsql_prod
+    container_name: PROJECT_NAME_pgsql_prod
+    ports:
+      - 5433:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data
     env_file:
@@ -19,12 +39,14 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: redis_prod
+    container_name: PROJECT_NAME_redis_prod
+    ports:
+      - 6379:6379
     volumes:
       - redis_data:/data
 
 volumes:
   postgres_data:
-    name: pgsql_prod_data
+    name: PROJECT_NAME_pgsql_data_prod
   redis_data:
-    name: redis_prod
+    name: PROJECT_NAME_redis_data_prod
