--- a/package.json
+++ b/package.json
@@ -15,46 +15,46 @@
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-slot": "^1.1.2",
-    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query": "^5.75.4",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.52.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.41.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.483.0",
-    "next": "^15.2.4",
-    "next-safe-action": "^7.10.4",
+    "lucide-react": "^0.507.0",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
-    "nodemailer": "^6.10.0",
-    "pg": "^8.14.1",
+    "nodemailer": "^7.0.2",
+    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.56.2",
     "react-toastify": "^11.0.5",
     "rfc4648": "^1.5.4",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
-    "zod": "^3.24.2",
-    "zustand": "^5.0.3"
+    "zod": "^3.24.4",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.13.11",
+    "@types/node": "^22.15.13",
     "@types/nodemailer": "^6.4.17",
-    "@types/pg": "^8.11.11",
+    "@types/pg": "^8.12.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.30.6",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "drizzle-kit": "^0.31.1",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "^15.3.1",
     "tailwindcss": "^4",
-    "tsx": "^4.19.3",
-    "typescript": "^5"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   }
 }
