--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
-    "react-toastify": "^11.0.5",
     "rfc4648": "^1.5.4",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.4",
