--- a/package.json
+++ b/package.json
@@ -15,46 +15,49 @@
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
+    "@hono/zod-validator": "^0.7.0",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-slot": "^1.1.2",
-    "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-query": "^5.81.0",
     "bcrypt": "^6.0.0",
-    "bullmq": "^5.53.1",
+    "bullmq": "^5.55.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.44.0",
+    "drizzle-orm": "^0.44.2",
+    "hono": "^4.8.2",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.507.0",
-    "next": "^15.3.3",
+    "lucide-react": "^0.518.0",
+    "next": "^15.3.4",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
-    "pg": "^8.16.0",
+    "pg": "^8.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.4",
+    "react-hook-form": "^7.58.1",
+    "resend": "^4.6.0",
     "rfc4648": "^1.5.4",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
-    "zod": "^3.25.42",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.15.27",
+    "@types/node": "^24.0.3",
     "@types/nodemailer": "^6.4.17",
-    "@types/pg": "^8.15.2",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.1",
-    "eslint": "^9.27.0",
-    "eslint-config-next": "^15.3.3",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.4",
     "tailwindcss": "^4",
-    "tsx": "^4.19.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
