--- a/package.json
+++ b/package.json
@@ -6,58 +6,58 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "check-types": "tsc --noEmit --pretty",
+    "lint": "eslint",
+    "prepare": "husky",
     "db:migrate": "drizzle-kit migrate",
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.7.0",
-    "@hookform/resolvers": "^5.1.1",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@tanstack/react-query": "^5.81.0",
+    "@hono/zod-validator": "^0.7.4",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@tanstack/react-query": "^5.90.7",
     "bcrypt": "^6.0.0",
-    "bullmq": "^5.55.0",
+    "bullmq": "^5.63.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.13",
-    "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.44.2",
-    "hono": "^4.8.2",
+    "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
+    "hono": "^4.10.4",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.518.0",
-    "next": "^15.3.4",
+    "lucide-react": "^0.553.0",
+    "next": "16.0.1",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.3",
-    "pg": "^8.16.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.58.1",
-    "resend": "^4.6.0",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.16.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
+    "resend": "^6.4.1",
     "rfc4648": "^1.5.4",
-    "sonner": "^2.0.5",
-    "tailwind-merge": "^3.0.2",
-    "tw-animate-css": "^1.2.4",
-    "zod": "^3.25.67",
-    "zustand": "^5.0.5"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^24.0.3",
-    "@types/nodemailer": "^6.4.17",
-    "@types/pg": "^8.15.4",
+    "@types/bcrypt": "^6.0.0",
+    "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.1",
-    "eslint": "^9.29.0",
-    "eslint-config-next": "^15.3.4",
+    "drizzle-kit": "^0.31.6",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1",
+    "husky": "^9.1.7",
     "tailwindcss": "^4",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "tsx": "^4.20.6",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5"
   }
 }
