--- a/env.example
+++ b/env.example
@@ -1,5 +1,8 @@
 APP_URL=http://localhost:3000
 
+BETTER_AUTH_SECRET=supersecret
+BETTER_AUTH_URL=http://localhost:3000
+
 NEXT_SERVER_ACTIONS_ENCRYPTION_KEY=secretsupersecret12345
 
 # POSTGRES
