feat: update packages, update postgres, replace auth actions with betterAuth

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 BETTER_AUTH_SECRET=supersecret
 BETTER_AUTH_URL=http://localhost:3000
@@ -10,7 +10,7 @@ POSTGRES_HOST=postgres_db
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=example
-POSTGRES_DB=unicap
+POSTGRES_DB=example_db
 
 # REDIS
 REDIS_HOST=localhost
