--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
     "@hono/zod-validator": "^0.7.4",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.4",
-    "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-query": "^5.90.10",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.3.34",
-    "bullmq": "^5.63.0",
+    "bullmq": "^5.63.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
-    "hono": "^4.10.4",
+    "hono": "^4.10.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.0.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.0",
-    "resend": "^6.4.1",
+    "react-hook-form": "^7.66.1",
+    "resend": "^6.5.0",
     "rfc4648": "^1.5.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -48,13 +48,13 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
-    "@types/nodemailer": "^7.0.3",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.6",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.3",
     "husky": "^9.1.7",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
