--- a/package.json
+++ b/package.json
@@ -15,50 +15,55 @@
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.7.4",
+    "@hono/zod-validator": "^0.7.6",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-slot": "^1.2.4",
-    "@tanstack/react-query": "^5.90.10",
+    "@tanstack/react-query": "^5.90.19",
     "bcrypt": "^6.0.0",
-    "better-auth": "^1.3.34",
-    "bullmq": "^5.63.2",
+    "better-auth": "^1.4.17",
+    "bullmq": "^5.66.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.7",
-    "hono": "^4.10.6",
+    "drizzle-orm": "^0.45.1",
+    "hono": "^4.11.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
-    "next": "^16.0.3",
+    "next": "^16.1.4",
     "next-themes": "^0.4.6",
-    "nodemailer": "^7.0.10",
-    "pg": "^8.16.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
-    "resend": "^6.5.0",
+    "nodemailer": "^7.0.12",
+    "pg": "^8.17.2",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
+    "resend": "^6.8.0",
     "rfc4648": "^1.5.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "zod": "^4.3.5",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@next/codemod": "^16.1.4",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
-    "@types/nodemailer": "^7.0.4",
-    "@types/pg": "^8.15.6",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.7",
-    "eslint": "^9",
-    "eslint-config-next": "^16.0.3",
+    "@types/nodemailer": "^7.0.5",
+    "@types/pg": "^8.16.0",
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3",
+    "drizzle-kit": "^0.31.8",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.4",
     "husky": "^9.1.7",
     "tailwindcss": "^4",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.8",
+    "@types/react-dom": "19.2.3"
   }
 }
