--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.4",
     "husky": "^9.1.7",
+    "prettier": "^3.8.1",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
